--- a/com.html
+++ b/com.html
@@ -105,7 +105,7 @@
   <div class="community-page">
     <div class="submenu">
       <img src="https://brandeps.com/icon-download/S/Shop-icon-vector-03.svg" alt="Shop">
-    <button class="button" data-toggle="modal" data-target="#shopModal" onclick="window.location.href='shop.html'">Shop</button>
+    <button class="button" data-toggle="modal" data-target="#shopModal" onclick="window.location.href='https://sv-shop.netlify.app/shop'">Shop</button>
 
     </div>
     <div class="submenu">
