--- a/index.html
+++ b/index.html
@@ -1,155 +1,248 @@
 
-<!doctype html>
-<html lang="en" class='h-100'>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="App Creates App">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <script src="../js/qrcode.min.js"></script>
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="nucleapp">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <meta name="theme-color" content="#FFFFFFFF">
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='icon' href='favicon.ico'>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.ico"/>
 
-    <!-- Bootstrap CSS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/7163eb833f.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-    <link href='style.css' rel='stylesheet'>
+    <title>Course App - Code Verse</title>
+    <link rel="manifest" href="/applink/manifest.json">
 
-    <style>
-      .code {
-  background-color: #333333; 
-  color: white; 
-  padding: 15px; 
-  border-radius: 10px; 
-  font-family: Fira Code, monospace;
-  width: 35%;
-}
-</style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M29HPJQ06E"></script>
 
+    <!--open graph tool-->
+    <meta property="og:title" content="Course App"/>
+    <meta property="og:image" content="https://nucleapp.s3.ap-south-1.amazonaws.com/public/users/651c4825b59bf8d18dc8e929/apps/651d171416ff7d6e587cc3a1/logo.png"/>
+    <meta property="og:description" content="NucleApp - App Creates Apps"/>
+    <meta property="og:url" content="https://nucleapp.com/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image:width" content="512"/>
+    <meta property="og:image:height" content="512"/>
     <script>
-      $(document).ready(function() {
-
-        var colourMode=getCookie('colourMode');
-        if (colourMode != '') {
-          document.getElementById('checkBox-CM').checked = false;
-          setCookie('colourMode', 'light');
-        }
-
-        if (colourMode == 'light') {
-          document.getElementById('checkBox-CM').checked = false;
-        } 
-        
-        if (colourMode == 'dark') {
-          document.getElementById('checkBox-CM').checked = true;
-          darkModeToggle()
-        }
-
-        $("#modal").modal('show');
-      });
-
+        // The value below is injected by flutter build, do not touch.
+        var serviceWorkerVersion = "3692500261";
     </script>
+<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXNKJMfL6TJBcMumCwEGwdPvhJCOQncqE"></script>-->
+    <!-- This script adds the flutter initialization JS code -->
+    <script src="/applink/flutter.js" defer></script>
+    <style>
+        .lds-ring {
+            display: inline-block;
+            position: relative;
+            width: 75px;
+            height: 75px;
+        }
 
-    <title>Supreme Verse</title>
+        .lds-ring div {
+            box-sizing: border-box;
+            display: block;
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            margin: 8px;
+            border: 6px solid #EF5350;
+            border-radius: 50%;
+            animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+            border-color: #EF5350 transparent transparent transparent;
+        }
 
-  </head>
+        .lds-ring div:nth-child(1) {
+            animation-delay: -0.45s;
+        }
 
-  <body id='error' class='d-flex flex-column h-100'>
+        .lds-ring div:nth-child(2) {
+            animation-delay: -0.3s;
+        }
 
-    <!-- Modal -->
-    <div class="modal fade in" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false" data-bs-backdrop='static' data-bs-keyboard='false'>
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Your username</h5>
-            <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-          </div>
-          <div class="modal-body">
-            <div class="input-group mb-3">
-              <span class="input-group-text" id="basic-addon1">@</span>
-              <input type="text" id='username' class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" autocomplete="off" required="true">
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" id='savename' class="btn btn-primary" data-bs-dismiss="modal">Save</button>
-          </div>
-        </div>
-      </div>
+        .lds-ring div:nth-child(3) {
+            animation-delay: -0.15s;
+        }
+
+        @keyframes lds-ring {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        #app-viewer-frame {
+            width: 100%;
+            height: 100%;
+        }
+
+        #app-viewer-promo-left {
+            display: none;
+        }
+
+        #app-viewer-promo-right {
+            display: none;
+        }
+
+        @media screen and (min-width: 900px) {
+            #app-viewer-frame {
+                width: 30%;
+                height: 100%;
+                background-color: #e0e0e0
+            }
+        }
+
+    </style>
+    <script src="../js/qrcode.min.js"></script>
+  <script>
+      // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDvWhOnJgHqu0eW3kKnZBfKC_3xROvcy0U",
+  authDomain: "code-verse-3f534.firebaseapp.com",
+  projectId: "code-verse-3f534",
+  storageBucket: "code-verse-3f534.appspot.com",
+  messagingSenderId: "477428272151",
+  appId: "1:477428272151:web:b5e8b703047edefb7d6052",
+  measurementId: "G-J9X8F5KQGR"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
+  </script>
+</head>
+<body style="margin:0;padding:0;">
+
+
+<div id="pc-app-viewer"
+     style="width: 100%; height: 100%; display: flex; position: fixed; background-color: #f5f5f5;justify-content: center;align-items: center">
+    <div id="app-viewer-promo-left"
+         style="color: #9e9e9e; width: 40%; height: 100%;flex-direction: column;justify-content: center;align-items: center; font-family:'Nunito Sans', Sans-serif, serif">
+        <img src="/images/logo.png" width="120px" alt="NucleApp">
+        <span style="font-size: 40px; color: #212121; padding-top: 10px">Supreme Studios</span>
+        <span style="padding: 15px; text-align: center; font-size: 25px;
+        <a href='https://play.google.com/store/apps/details?id=com.nucleapp'>
+            <img width="250px" 
+                 src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/>
+        </a>
     </div>
-
-    <div class="modal fade in" id="helpInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel1">Slash Commands</h5>
-          </div>
-          <div class="modal-body">
-            <div class='code'>
-              <p>/img (url) - <i> Send an image</i></p>
-              <p>/anon (message) - <i> Send an anonymous message</i></p>
-              <p>/me (message) - <i> Send an italics message</i></p>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
+    <div id="app-viewer-frame" style="border: 0.5px solid #bdbdbd; overflow: auto">
     </div>
+    <div id="app-viewer-promo-right"
+         style="color: #9e9e9e; width: 40%; height: 100%;flex-direction: column;justify-content: center;align-items: center; font-family:'Nunito Sans', Sans-serif, serif">
+        <img id="app-logo" crossorigin="anonymous" src="/images/logo.png" width="120px" alt="NucleApp">
+        <span id="app-name" style="font-size: 40px; color: #212121; padding-top: 10px"></span>
+        <span style="padding: 15px; text-align: center; font-size: 25px;">Scan the QR code to </br>open this App in your mobile</span>
+        <div id="qrcode"></div>
+    </div>
+</div>
 
-
-    <nav class="navbar supreme verse-lightnav" id='supreme Verse-navbar'>
-      <div class="container-fluid">
-        <a class="navbar-brand chatify-navbar-brand-light" href="/" id='navLogo'>Supreme Verse</a>
-        <label class="switch">
-          <input type="checkbox" onclick="darkModeToggle()" id='checkBox-CM' checked>
-          <span class="slider round"></span>
-        </label>
-        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#helpInfo"><i class="fas fa-question"></i></button>
-      </div>
-    </nav>
-
-    <div class="alert alert-danger slide-in-up" role="alert" style='margin-left: 3%; margin-right: 3%; margin-top: 10px; display: none;' id='alertBox'> Alert </div>
-
-    <br>
-
-    <div id='chat' style='padding-left: 20px; max-height: 83%; overflow-y: scroll;'></div>
-
-    <footer class="footer mt-auto py-3 bg-light" id='footer'>
-      <div class="container">
-        <div class='c-flexcontainer'>
-          <input class="form-control mr-10" type="text" name='message' placeholder="Start typing..." aria-label="default input example" id='message' autocomplete="off">
-          <button class="btn btn-primary awidth" id='send' name='submit' aria-label="default input example"><i class="fas fa-paper-plane"></i></button>
+<div id="temp-loader" style="width: 100vw; height: 100vh; display: flex; position: fixed; background-color: #f5f5f5">
+    <div style="width: 100%; display: flex;justify-content: center; align-items: center; flex-direction: column">
+        <div class="lds-ring">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-      </div>
-      <audio id='audio' src="https://freesound.org/data/previews/235/235911_2391840-lq.ogg" autoplay="true"></audio>
-    </footer>
+        <div style="color:#212121;margin-top:25px;display: flex"><img scr="/images/logo.png"/><span
+                style="font-size: 35px; font-family: Nunito Sans, Sans-serif">Supreme Verse</span></div>
+    </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script>
-function setCookie(cname,cvalue) {
-  document.cookie = cname + "=" + cvalue + ";"
-}
+    function setMetaThemeColor(color) {
+        document.querySelector('meta[name="theme-color"]').setAttribute("content", color);
+    }
 
-function getCookie(cname) {
-  var name = cname + "=";
-  var decodedCookie = decodeURIComponent(document.cookie);
-  var ca = decodedCookie.split(';');
-  for(var i = 0; i < ca.length; i++) {
-    var c = ca[i];
-    while (c.charAt(0) == ' ') {
-      c = c.substring(1);
+    function appLoaded() {
+        setTimeout(function(){
+            document.getElementById("temp-loader").style.display = "none";
+        }, 1000)
+        setTimeout(function(){
+            window.history.replaceState({}, "", document.location.href.split("#")[0]);
+        }, 3000)
     }
-    if (c.indexOf(name) == 0) {
-      return c.substring(name.length, c.length);
-    }
-  }
-  return "";
-}
+
+    let mediaQuery = window.matchMedia("(min-width: 1000px)");
+    window.addEventListener('load', function (ev) {
+        if (mediaQuery.matches) {
+            document.getElementById("app-viewer-promo-left").style.display = 'flex';
+            document.getElementById("app-viewer-promo-right").style.display = 'flex';
+            appTitle ? document.getElementById("app-name").innerText = appTitle : null;
+            appLogo ? document.getElementById("app-logo").src = appLogo : null;
+            new QRCode("qrcode", {
+                text: window.location.href,
+                width: 150,
+                height: 150,
+                colorDark: "#000000",
+                colorLight: "#ffffff",
+                correctLevel: QRCode.CorrectLevel.H
+            });
+            _flutter.loader.loadEntrypoint({
+                    serviceWorker: {
+                        serviceWorkerVersion: serviceWorkerVersion,
+                    },
+                    onEntrypointLoaded: function (engineInitializer) {
+                        engineInitializer.initializeEngine(
+                            {hostElement: document.getElementById("app-viewer-frame")}
+                        ).then(function (appRunner) {
+                            appRunner.runApp();
+                        });
+                    }
+                }
+            );
+            //flutter render mode
+            // window.flutterWebRenderer = "html";
+        } else {
+            _flutter.loader.loadEntrypoint({
+                serviceWorker: {
+                    serviceWorkerVersion: serviceWorkerVersion,
+                },
+                onEntrypointLoaded: function (engineInitializer) {
+                    engineInitializer.initializeEngine().then(function (appRunner) {
+                        appRunner.runApp();
+                    });
+                }
+            });
+            //flutter render mode
+        }
+        window.flutterWebRenderer = "canvaskit";
+        //Analytics
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'G-M29HPJQ06E');
+
+
+    })
+    var tag = document.createElement("script");
+    tag.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBXNKJMfL6TJBcMumCwEGwdPvhJCOQncqE&callback=initMap";
+    tag.async = true;
+    window.initMap = function() {};
+    document.head.appendChild(tag);
 </script>
-<script src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
-    <script src='./utils.js'></script>
-    <script src='./index.js'></script>
-  </body>
+<script>var appTitle = "Course App"; var appLogo = "https://nucleapp.s3.ap-south-1.amazonaws.com/public/users/651c4825b59bf8d18dc8e929/apps/651d171416ff7d6e587cc3a1/logo.png"</script></body>
 </html>
